--- a/templates/home.html
+++ b/templates/home.html
@@ -9,42 +9,42 @@
   <h2>Add: </h2>
   <form>
     <select name = "operation">
-      <option Table = "insurance">Add to Health Insurance</option>
-      <option Table = "benefit">Add to Benefit Type</option>
-      <option Table = "status">Add to Project Status</option>
-      <option Table = "address">Add to Address</option>
-      <option Table = "position">Add to Job Position</option>
-      <option Table = "department">Add to Department</option>
-      <option Table = "employee">Add to Employee</option>
-      <option Table = "empBenefit">Add to Employee's Benefit</option>
-      <option Table = "project">Add to Project</option>
-      <option Table = "role">Add to Role</option>
-      <option Table = "empProject">Add to Employee's Project</option>
-      <option Table = "empDep">Add to Employee's Department</option>
-      <option Table = "insurance">Update Health Insurance</option>
-      <option Table = "benefit">Update Benefit Type</option>
-      <option Table = "status">Update Project Status</option>
-      <option Table = "address">Update Address</option>
-      <option Table = "position">Update Job Position</option>
-      <option Table = "department">Update Department</option>
-      <option Table = "employee">Update Employee</option>
-      <option Table = "empBenefit">Update Employee's Benefit</option>
-      <option Table = "project">Update Project</option>
-      <option Table = "role">Update Role</option>
-      <option Table = "empProject">Update Employee's Project</option>
-      <option Table = "empDep">Update Employee's Department</option>
-      <option Table = "insurance">Delete from Health Insurance</option>
-      <option Table = "benefit">Delete from Benefit Type</option>
-      <option Table = "status">Delete from Project Status</option>
-      <option Table = "address">Delete from Address</option>
-      <option Table = "position">Delete from Job Position</option>
-      <option Table = "department">Delete from Department</option>
-      <option Table = "employee">Delete from Employee</option>
-      <option Table = "empBenefit">Delete from Employee's Benefit</option>
-      <option Table = "project">Delete from Project</option>
-      <option Table = "role">Delete from Role</option>
-      <option Table = "empProject">Delete from Employee's Project</option>
-      <option Table = "empDep">Delete from Employee's Department</option>
+      <option Table = "Ainsurance">Add to Health Insurance</option>
+      <option Table = "Abenefit">Add to Benefit Type</option>
+      <option Table = "Astatus">Add to Project Status</option>
+      <option Table = "Aaddress">Add to Address</option>
+      <option Table = "Aposition">Add to Job Position</option>
+      <option Table = "Adepartment">Add to Department</option>
+      <option Table = "Aemployee">Add to Employee</option>
+      <option Table = "AempBenefit">Add to Employee's Benefit</option>
+      <option Table = "Aproject">Add to Project</option>
+      <option Table = "Arole">Add to Role</option>
+      <option Table = "AempProject">Add to Employee's Project</option>
+      <option Table = "AempDep">Add to Employee's Department</option>
+      <option Table = "Uinsurance">Update Health Insurance</option>
+      <option Table = "Ubenefit">Update Benefit Type</option>
+      <option Table = "Ustatus">Update Project Status</option>
+      <option Table = "Uaddress">Update Address</option>
+      <option Table = "Uposition">Update Job Position</option>
+      <option Table = "Udepartment">Update Department</option>
+      <option Table = "Uemployee">Update Employee</option>
+      <option Table = "UempBenefit">Update Employee's Benefit</option>
+      <option Table = "Uproject">Update Project</option>
+      <option Table = "Urole">Update Role</option>
+      <option Table = "UempProject">Update Employee's Project</option>
+      <option Table = "UempDep">Update Employee's Department</option>
+      <option Table = "Dinsurance">Delete from Health Insurance</option>
+      <option Table = "Dbenefit">Delete from Benefit Type</option>
+      <option Table = "Dstatus">Delete from Project Status</option>
+      <option Table = "Daddress">Delete from Address</option>
+      <option Table = "Dposition">Delete from Job Position</option>
+      <option Table = "Ddepartment">Delete from Department</option>
+      <option Table = "Demployee">Delete from Employee</option>
+      <option Table = "DempBenefit">Delete from Employee's Benefit</option>
+      <option Table = "Dproject">Delete from Project</option>
+      <option Table = "Drole">Delete from Role</option>
+      <option Table = "DempProject">Delete from Employee's Project</option>
+      <option Table = "DempDep">Delete from Employee's Department</option>
       <option Table = "query1">Finding employee’s data for a given employee</option>
       <option Table = "query2">Finding who are employees of a given department</option>
       <option Table = "query3">Finding who are employees working on a given project</option>
