--- a/templates/error.html
+++ b/templates/error.html
@@ -1,1 +1,20 @@
+{%extends "template.html"%}
+{%block title%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Error in Operation!</title>
+</head>
+<div>
+      <!-- Will need some change to make sure it gets the right values -->
+  <a href="'/error/'">Click here to return to home page!</a>
+</div>
+</body>
+</html>
+{%endblock%}
+{%block content%}
 
+{%endblock%}
