--- a/templates/updateRoles.html
+++ b/templates/updateRoles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Database</title>
+    <title>Update Roles</title>
 </head>
 <body>
   <div>
