--- a/templates/updateProjectStatus.html
+++ b/templates/updateProjectStatus.html
@@ -4,51 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Database</title>
+    <title>Update Project Status</title>
 </head>
 <body>
 <div>
+<form action = "{{ url_for('update') }}" method="post">
  <h2>"Select" the table (it's for the code): </h2>
- <form>
-   <select name = "i1">
+ <select name = "i1">
      <option attribute = "ProjectStatus">Project Status</option>
-   </select>
- </form>
-</div>
-<div>
-  <h2>Add the attribute to be updated upon</h2>
-  <form>
-    <select name = "i2">
+ </select>
+ <h2>Add the attribute to be updated upon</h2>
+ <select name = "i2">
       <option attribute = "status">Status</option>
-    </select>
-  </form>
- </div>
-
-  <div>
-  <h2>Add: </h2>
-  <form action="/url" method="GET">
-        <p>Please enter the new status:</p>
+ </select>
+ <h2>Please enter the new status:</h2>
         <input type="text" placeholder="0" name = "i3">
-  </form>
-  </div>
-<div>
-  <h2>Add the attribute of the condtion to be updated upon</h2>
-  <form>
-    <select name = "i4">
+ <h2>Add the attribute of the condtion to be updated upon</h2>
+  <select name = "i4">
       <option attribute = "status">Status</option>
-    </select>
-  </form>
- </div>
-  <div>
-  <h2>Add: </h2>
-  <form action="/url" method="GET">
-        <p>Add the old status to replace:</p>
-        <input type="text" placeholder="0" name = "i5">
-  </form>
+  </select>
+  <h2>Add the old status to replace:</h2>
+      <input type="text" placeholder="0" name = "i5">
+  <button type="submit">Finalize selection</button>
   </div>
-  <div>
-      <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update/">Finalize selection</a>
-  </div>
+</form>
 </body>
 </html>
