--- a/templates/query8.html
+++ b/templates/query8.html
@@ -10,16 +10,13 @@
 </head>
 <div>
 <h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the given role:</p>
-   <input type="text" name="i1"/> <br>
-   <p>Please enter the given project:</p>
-   <input type="text" name="i2"/> <br>
+<form action = "{{ url_for('query8') }}" method="post">
+    <p>Please enter the given role:</p>
+    <input type="text" name="i1"/> <br>
+    <p>Please enter the given project:</p>
+    <input type="text" name="i2"/> <br>
+    <button type="submit">Finalize selection</button>
 </form>
-</div>
-<div>
-      <!-- Will need some change to make sure it gets the right values -->
-  <a href="/query8/">Finalize selection</a>
 </div>
 </body>
 </html>
