--- a/templates/query19.html
+++ b/templates/query19.html
@@ -9,10 +9,9 @@
     <title>Finding the name of all project leaders along with the name of project</title>
 </head>
 
-<div>
-      <!-- Will need some change to make sure it gets the right values -->
-  <a href="/query19/">Query!</a>
-</div>
+<form action = "{{ url_for('query19') }}" method="post">
+    <button type="submit">Finalize selection</button>
+</form>
 </body>
 </html>
 {%endblock%}
