--- a/templates/query15.html
+++ b/templates/query15.html
@@ -10,16 +10,13 @@
 </head>
 <div>
 <h2>Add: </h2>
-<form action="/url" method="GET">
+<form action = "{{ url_for('query15') }}" method="post">
    <p>Please enter the role:</p>
    <input type="text" name="i1"/> <br>
    <p>Please enter the level:</p>
    <input type="text" name="i2"/> <br>
+    <button type="submit">Finalize selection</button>
 </form>
-</div>
-<div>
-      <!-- Will need some change to make sure it gets the right values -->
-  <a href="/query15/">Finalize selection</a>
 </div>
 </body>
 </html>
