--- a/templates/query1.html
+++ b/templates/query1.html
@@ -10,15 +10,14 @@
 </head>
 <div>
 <h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the employee ID:</p>
+<form action = "{{ url_for('query9') }}" method="post">
+    <p>Please enter the employee ID:</p>
    <input type="text" name="i1"/> <br>
+    <button type="submit">Finalize selection</button>
 </form>
+
 </div>
-<div>
-      <!-- Will need some change to make sure it gets the right values -->
-  <a href="/query1/">Finalize selection</a>
-</div>
+
 </body>
 </html>
 {%endblock%}
