--- a/templates/deleteEmployeeInfo.html
+++ b/templates/deleteEmployeeInfo.html
@@ -4,48 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Database</title>
+    <title>Delete Employee Info</title>
 </head>
 <body>
   <div>
-  <h2>"Select" the table (it's for the code): </h2>
-  <form>
-    <select name = "i1">
-      <option attribute = "EmployeeInfo">Employee Info</option>
-    </select>
-  </form>
-  </div>
-  <div>
-  <h2>Add the attribute to be deleted on</h2>
-  <form>
-    <select name = "i2">
-      <option attribute = "EmployeeID">Employee ID</option>
-      <option attribute = "SSN">SSN</option>
-      <option attribute = "Name">Name</option>
-      <option attribute = "Gender">Gender</option>
-      <option attribute = "DoB">Birthdate (yyyy-mm-dd)</option>
-      <option attribute = "PrimaryAddress">Primary Address</option>
-      <option attribute = "PhoneNumber">Phone Number</option>
-      <option attribute = "HighestDegree">Highest Degree</option>
-      <option attribute = "YearsExperience">Years Experience</option>
-      <option attribute = "HiringPosition">Hiring Position</option>
-      <option attribute = "HiringSalary">Hiring Salary</option>
-      <option attribute = "CurrentPosition">Current Position</option>
-      <option attribute = "CurrentSalary">Current Salary</option>
-      <option attribute = "Coverage">Health Insurance Coverage</option>
-    </select>
-  </form>
-  </div>
-  <div>
-  <h2>Add: </h2>
-  <form action="/url" method="GET">
-        <p>Please enter the value to be deleted on:</p>
-        <input type="text" placeholder="0" name = "i3">
-  </form>
-  </div>
-  <div>
-      <!-- Will need some change to make sure it gets the right values -->
-    <a href="/delete/">Finalize selection</a>
-  </div>
+ <form action = "{{ url_for('delete') }}" method="post">
+     <h2>"Select" the table (it's for the code): </h2>
+         <select name = "i1">
+             <option attribute = "EmployeeInfo">Employee Information</option>
+         </select>
+     <h2>Add the attribute to be deleted upon</h2>
+         <select name = "i2">
+          <option attribute = "EmployeeID">Employee ID</option>
+          <option attribute = "SSN">SSN</option>
+          <option attribute = "Name">Name</option>
+          <option attribute = "Gender">Gender</option>
+          <option attribute = "DoB">Birthdate (yyyy-mm-dd)</option>
+          <option attribute = "PrimaryAddress">Primary Address</option>
+          <option attribute = "PhoneNumber">Phone Number</option>
+          <option attribute = "HighestDegree">Highest Degree</option>
+          <option attribute = "YearsExperience">Years Experience</option>
+          <option attribute = "HiringPosition">Hiring Position</option>
+          <option attribute = "HiringSalary">Hiring Salary</option>
+          <option attribute = "CurrentPosition">Current Position</option>
+          <option attribute = "CurrentSalary">Current Salary</option>
+          <option attribute = "Coverage">Health Insurance Coverage</option>
+         </select>
+     <h2>Please enter the value to be deleted:</h2>
+         <input type="text" placeholder="0" name="i3">
+     
+     <button type="submit">Finalize selection</button>
+ </form>
+</div>
 </body>
 </html>
