--- a/templates/deleteEmployeeBenefits.html
+++ b/templates/deleteEmployeeBenefits.html
@@ -4,39 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Database</title>
+    <title>Delete Employee Benefits</title>
 </head>
 <body>
-<div>
-  <h2>"Select" the table (it's for the code): </h2>
-  <form>
-    <select name = "i1">
-      <option attribute = "EmployeeBenefits">Employee Benefits</option>
-    </select>
-  </form>
-  </div>
   <div>
-  <h2>Add the attribute to be deleted upon</h2>
-  <form>
-    <select name = "i2">
-      <option attribute = "EmployeeID">Employee ID</option>
-      <option attribute = "Benefit">Benefit</option>
-      <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-      <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
-    </select>
-  </form>
-  </div>
-  <div>
-  <h2>Add: </h2>
-  <form action="/url" method="GET">
-        <p>Please enter the value to be deleted upon:</p>
-        <input type="text" placeholder="0" name = "i3">
-  </form>
-  </div>
-  
-  <div>
-      <!-- Will need some change to make sure it gets the right values -->
-    <a href="/delete/">Finalize selection</a>
-  </div>
+ <form action = "{{ url_for('delete') }}" method="post">
+     <h2>"Select" the table (it's for the code): </h2>
+         <select name = "i1">
+             <option attribute = "EmployeeBenefits">Employee Benefits</option>
+         </select>
+     <h2>Add the attribute to be deleted upon</h2>
+         <select name = "i2">
+              <option attribute = "EmployeeID">Employee ID</option>
+              <option attribute = "Benefit">Benefit</option>
+              <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
+              <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+         </select>
+     <h2>Please enter the value to be deleted:</h2>
+         <input type="text" placeholder="0" name="i3">
+     
+     <button type="submit">Finalize selection</button>
+ </form>
+</div>
 </body>
 </html>
