--- a/templates/addPositions.html
+++ b/templates/addPositions.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Database</title>
+    <title>Add Position</title>
 </head>
 <div>
 <h2>Add: </h2>
-<form action="/url" method="GET">
+<form action="{{ url_for('insertIntoPositions') }}" method="post">
    <p>Please enter the new Position:</p>
    <input type="text" name="i1"/> <br>
    <p>Please enter the new minimum salary:</p>
    <input type="text" name="i2"/> <br>
    <p>Please enter the new maximum salary:</p>
    <input type="text" name="i3"/> <br>
+    <button type="submit">Finalize selection</button>
 </form>
 </div>
-<div>
-      <!-- Will need some change to make sure it gets the right values -->
-  <a href="'/insert-Positions/'">Finalize selection</a>
-</div>
+
 </body>
 </html>
