--- a/templates/info.html
+++ b/templates/info.html
@@ -9,7 +9,7 @@
     <title>Query Result!</title>
 </head>
 <div>
-<table>
+<table border="1px">
   {% for row in rows %}
   <tr>
     {% for r in row %}
