--- a/templates/addHealthInsurance.html
+++ b/templates/addHealthInsurance.html
@@ -1,5 +1,3 @@
-{%extends "template.html"%}
-{%block title%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +8,7 @@
 </head>
 <div>
 <h2>Add: </h2>
-<form action="{{ url_for('insertIntoHealthInsurance') }}" method="post">
+<form action="{{ url_for('insertIntoHealthInsurance') }}", method="post">
    <p>Please enter the new type of coverage:</p>
    <input type="text" name="i1"/> <br>
     <button type="submit">Finalize selection</button>
@@ -19,7 +17,3 @@
 
 </body>
 </html>
-{%endblock%}
-{%block content%}
-
-{%endblock%}
