--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
   <div>
   <h2>Add: </h2>
-  <form>
+  <form action = "/add/", method = "POST">
     <select name = "addRow">
       <option addingTable = "insurance">Health Insurance</option>
       <option addingTable = "benefit">Benefit Type</option>
@@ -22,6 +22,7 @@
       <option addingTable = "empProject">Employee's Project</option>
       <option addingTable = "empDep">Employee's Department</option>
     </select>
+    <input type = "submit" value = "Go">
   </form>
   </div>
   <div>
