Adding buttons into home.html (no actions yet)

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
   <div>
   <h2>Add: </h2>
-  <form action = "/add/", method = "POST">
+  <form method = "POST">
     <select name = "addRow">
       <option addingTable = "insurance">Health Insurance</option>
       <option addingTable = "benefit">Benefit Type</option>
