--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
   <div>
   <h2>Add: </h2>
-  <form method = "POST">
+  <form action = "{{url_for('add')}}" method = "POST">
     <select name = "addRow">
       <option addingTable = "insurance">Health Insurance</option>
       <option addingTable = "benefit">Benefit Type</option>
@@ -27,7 +27,7 @@
   </div>
   <div>
     <h2>Update: </h2>
-    <form method = "POST">
+    <form action = "{{url_for('update')}}" method = "POST">
       <select name = "updateRow">
         <option updateTable = "insurance">Health Insurance</option>
         <option updateTable = "benefit">Benefit Type</option>
@@ -47,7 +47,7 @@
   </div>
   <div>
   <h2>Delete: </h2>
-  <form method = "POST">
+  <form action = "{{url_for('delete')}}" method = "POST">
     <select name = "deleteRow">
       <option deletingTable = "insurance">Health Insurance</option>
       <option deletingTable = "benefit">Benefit Type</option>
