--- a/templates/addHealthInsurance.html
+++ b/templates/addHealthInsurance.html
@@ -8,7 +8,7 @@
 </head>
 <div>
 <h2>Add: </h2>
-<form action="{{ url_for('insertIntoHealthInsurance') }}", method="post">
+<form method="post"> <!--action="{{ url_for('insertIntoHealthInsurance') }}",-->
    <p>Please enter the new type of coverage:</p>
    <input type="text" name="i1"/> <br>
     <button type="submit">Finalize selection</button>
