--- a/templates/query.html
+++ b/templates/query.html
@@ -8,18 +8,18 @@
   <h2>Show all: </h2>
   <form action = "/showall/" method="POST">
     <select name = "show">
-      <option value = "insurance">Health Insurance</option>
-      <option value = "benefit">Benefit Type</option>
-      <option value = "status">Project Status</option>
-      <option value = "address">Address</option>
-      <option value = "position">Job Position</option>
-      <option value = "department">Department</option>
-      <option value = "employee">Employee</option>
-      <option value = "empBenefit">Employee's Benefit</option>
-      <option value = "project">Project</option>
-      <option value = "role">Role</option>
-      <option value = "empProject">Employee's Project</option>
-      <option value = "empDep">Employee's Department</option>
+      <option value = "HealthInsurance">Health Insurance</option>
+      <option value = "Benefits">Benefit Type</option>
+      <option value = "ProjectStatus">Project Status</option>
+      <option value = "Addresses">Address</option>
+      <option value = "Positions">Job Position</option>
+      <option value = "Departments">Department</option>
+      <option value = "Employees">Employee</option>
+      <option value = "EmployeeBenefits">Employee's Benefit</option>
+      <option value = "Projects">Project</option>
+      <option value = "Roles">Role</option>
+      <option value = "EmployeeProjects">Employee's Project</option>
+      <option value = "EmployeeAssignments">Employee's Department</option>
     </select>
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
