--- a/templates/addHealthInsurance.html
+++ b/templates/addHealthInsurance.html
@@ -14,9 +14,11 @@
     <button type="submit">Finalize selection</button>
 </form>
 </div>
+<div>
 {%if added%}
-    Added
+    Added {{added}}
 {%endif%}
+</div>
 <div>
     <a href="{{url_for("home")}}">Return Home</a href>
 </div>
