--- a/templates/addRoles.html
+++ b/templates/addRoles.html
@@ -1,5 +1,3 @@
-{%extends "template.html"%}
-{%block title%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,10 +14,13 @@
     <button type="submit">Finalize selection</button>
 </form>
 </div>
-
+<div>
+    {%if added%}
+        Added {{added}}
+    {%endif%}
+    </div>
+    <div>
+        <a href="{{url_for("home")}}">Return Home</a href>
+    </div>
 </body>
 </html>
-{%endblock%}
-{%block content%}
-
-{%endblock%}
