Done with add pages

--- a/templates/addEmployeeInfo.html
+++ b/templates/addEmployeeInfo.html
@@ -10,33 +10,33 @@
 <h2>Add: </h2>
 <form action="{{ url_for('insertIntoEmployeeInfo') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
-   <input type="text" name="i1"/> <br>
+   <input type="text" name="id"/> <br>
    <p>Please enter the new SSN:</p>
-   <input type="text" name="i2"/> <br>
+   <input type="text" name="ssn"/> <br>
    <p>Please enter the new Name:</p>
-   <input type="text" name="i3"/> <br>
+   <input type="text" name="name"/> <br>
    <p>Please enter the new Gender:</p>
-   <input type="text" name="i4"/> <br>
+   <input type="text" name="gender"/> <br>
    <p>Please enter the new Date of Birth as yyyy-mm-dd:</p>
-   <input type="text" name="i5"/> <br>
+   <input type="text" name="birth"/> <br>
    <p>Please enter the new Primary Address:</p>
-   <input type="text" name="i6"/> <br>
+   <input type="text" name="address"/> <br>
    <p>Please enter the new Phone Number:</p>
-   <input type="text" name="i7"/> <br>
+   <input type="text" name="phone"/> <br>
    <p>Please enter the new Highest Degree:</p>
-   <input type="text" name="i8"/> <br>
+   <input type="text" name="degree"/> <br>
    <p>Please enter the new Years of Experience:</p>
-   <input type="text" name="i9"/> <br>
+   <input type="text" name="experience"/> <br>
    <p>Please enter the new Hiring Position:</p>
-   <input type="text" name="i10"/> <br>
+   <input type="text" name="hPosition"/> <br>
    <p>Please enter the new Hiring Salary:</p>
-   <input type="text" name="i11"/> <br>
+   <input type="text" name="hSalary"/> <br>
    <p>Please enter the new Current Position:</p>
-   <input type="text" name="i12"/> <br>
+   <input type="text" name="position"/> <br>
    <p>Please enter the new Current Salary:</p>
-   <input type="text" name="i13"/> <br>
+   <input type="text" name="salary"/> <br>
    <p>Please enter the new Health Insurance Coverage:</p>
-   <input type="text" name="i14"/> <br>
+   <input type="text" name="insurance"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
 </div>
