--- a/templates/addEmployeeAssignments.html
+++ b/templates/addEmployeeAssignments.html
@@ -10,13 +10,13 @@
 <h2>Add: </h2>
 <form action="{{ url_for('insertIntoEmployeeAssignments') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
-   <input type="text" name="i1"/> <br>
+   <input type="text" name="emp"/> <br>
    <p>Please enter the new Department:</p>
-   <input type="text" name="i2"/> <br>
+   <input type="text" name="dep"/> <br>
    <p>Please enter the new Start Date as yyyy-mm-dd:</p>
-   <input type="text" name="i3"/> <br>
+   <input type="text" name="start"/> <br>
    <p>Please enter the new End Date as yyyy-mm-dd:</p>
-   <input type="text" name="i4"/> <br>
+   <input type="text" name="end"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
 </div>
