--- a/templates/home.html
+++ b/templates/home.html
@@ -9,18 +9,18 @@
   <h2>Add: </h2>
   <form action = "{{url_for('add')}}" method = "POST">
     <select name = "addRow">
-      <option addingTable = "insurance">Health Insurance</option>
-      <option addingTable = "benefit">Benefit Type</option>
-      <option addingTable = "status">Project Status</option>
-      <option addingTable = "address">Address</option>
-      <option addingTable = "position">Job Position</option>
-      <option addingTable = "department">Department</option>
-      <option addingTable = "employee">Employee</option>
-      <option addingTable = "empBenefit">Employee's Benefit</option>
-      <option addingTable = "project">Project</option>
-      <option addingTable = "role">Role</option>
-      <option addingTable = "empProject">Employee's Project</option>
-      <option addingTable = "empDep">Employee's Department</option>
+      <option value = "insurance">Health Insurance</option>
+      <option value = "benefit">Benefit Type</option>
+      <option value = "status">Project Status</option>
+      <option value = "address">Address</option>
+      <option value = "position">Job Position</option>
+      <option value = "department">Department</option>
+      <option value = "employee">Employee</option>
+      <option value = "empBenefit">Employee's Benefit</option>
+      <option value = "project">Project</option>
+      <option value = "role">Role</option>
+      <option value = "empProject">Employee's Project</option>
+      <option value = "empDep">Employee's Department</option>
     </select>
     <input type = "submit" value = "Go">
   </form>
